feat [system] central logger, env variables
