# internal/dto/weather_dto.go
@@ -12,10 +12,25 @@ type WeatherData struct {
 	Timestamp   time.Time `json:"timestamp"`
 }
 
+type WeatherOverviewData struct {
+	Lat             float32 `json:"lat" example:"38.4"`
+	Lon             float32 `json:"lon" example:"38.4"`
+	TZ              string  `json:"tz" example:"+02:00"`
+	Date            string  `json:"date" example:"2023-04-27"`
+	Units           string  `json:"units" example:"metric"`
+	WeatherOverview string  `json:"weather_overview" example:"clear sky"`
+}
+
 // WeatherResponse is the generic response wrapper for the weather API.
 // It's used for both successful and failed responses.
 type WeatherResponse struct {
 	Success bool         `json:"success" example:"true"`
 	Data    *WeatherData `json:"data,omitempty"`
 	Error   string       `json:"error,omitempty" example:"city not found"`
+}
+
+type WeatherOverviewResponse struct {
+	Success bool                 `json:"success" example:"true"`
+	Data    *WeatherOverviewData `json:"data,omitempty"`
+	Error   string               `json:"error,omitempty" example:"lat lon not found"`
 }
